--- a/templates/base.html
+++ b/templates/base.html
@@ -386,11 +386,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'home' %}"><i class="fas fa-home"></i><span class="nav-text">الرئيسية</span></a>
                         </li>
-                        {% if user.is_authenticated and user.is_superuser %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'admin_dashboard' %}"><i class="fas fa-chart-line"></i><span class="nav-text">داش بورد الإدارة</span></a>
-                            </li>
-                        {% endif %}
+                        <!-- Admin Dashboard Link Removed -->
                         <!-- الأقسام للمستخدمين المسجلين فقط -->
                         {% if user.is_authenticated %}
                             {% if user.is_warehouse_staff %}
